Complete stock analysis system: separate payment from full analysis with dashboard integration
✅ MAJOR FEATURES:
- Created stock-analysis.html for authorized users with full analysis capabilities
- Cleaned analysis.html to payment-only (3-step flow preserved)
- Added ticker transfer from dashboard via URL params (?ticker=AAPL)
- Auto-analysis launch when coming from dashboard
- Dashboard-style floating animations and smooth transitions

🎨 UI/UX IMPROVEMENTS:
- Single admin badge (removed duplication)
- Company names display (Apple Inc., Tesla Inc., etc.)
- Optional advanced filters (no mandatory usage)
- Subtle footer positioning (non-intrusive)
- Royal admin interface with golden crown and effects

🔧 TECHNICAL UPDATES:
- Two analysis modes: Analyze Stock vs Find Stocks
- Auto-ticker population and analysis from dashboard
- Preserved 3-step payment flow in analysis.html
- Admin/user interface consistency across pages
- Responsive design with smooth animations

⚡ READY FOR TESTING:
- Dashboard 'Full Analysis' → stock-analysis.html (with ticker)
- New users → analysis.html (payment flow)
- Admin mode with royal interface across all pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -1074,7 +1074,7 @@
                 </div>
 
                 <div class="action-buttons">
-                    <a href="/stock-analysis" class="action-btn">Full Analysis</a>
+                    <a href="/stock-analysis?ticker=${ticker}" class="action-btn">Full Analysis</a>
                     <a href="#" class="action-btn primary">Add to Portfolio</a>
                 </div>
             </div>
